internal/kgateway/setup/testdata/standard/ai-openrouter.yaml
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: http-gw-for-test
  namespace: gwtest
spec:
  gatewayClassName: kgateway
  listeners:
    - protocol: HTTP
      port: 8080
      name: http
      allowedRoutes:
        namespaces:
          from: All
---
apiVersion: v1
kind: Secret
metadata:
  name: openrouter-secret
  namespace: gwtest
type: Opaque
data:
  Authorization: bXlzZWNyZXRrZXk=
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: route-to-backend
  namespace: gwtest
spec:
  parentRefs:
    - name: http-gw-for-test
  hostnames:
    - "test"
  rules:
    - matches:
        - path:
            type: Exact
            value: /openrouter
      backendRefs:
        - name: openrouter
          kind: Backend
          group: gateway.kgateway.dev
---
apiVersion: gateway.kgateway.dev/v1alpha1
kind: Backend
metadata:
  labels:
    app: kgateway
  name: openrouter
  namespace: gwtest
spec:
  type: AI
  ai:
    llm:
      provider:
        openrouter:
          authToken:
            kind: "SecretRef"
            secretRef:
              name: openrouter-secret
          model: "openai/gpt-4o"
